--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,7 +5,7 @@
     <title>L3.2</title>
 </head>
 <body>
-<p>L3.2 example</p>
+<p>Pensioner</p>
 <h3> Please, add your data: </h3>
 <form action="/signup" method="POST">
     Login: <input type="text" name="login"/>
