--- a/public_html/index.html
+++ b/public_html/index.html
@@ -226,77 +226,74 @@
                     <h4 class="modal-title" color="black">Введите Ваши данные</h4>
                 </div>
                 <div class="modal-body">
-                    <form>
+                    <form action="/index.html" method="POST">
 					  <div class="form-group">
-    <label for="exampleInputEmail1">ФИО</label>
+    <label></label>
+    <input type="firstname" class="form-control" id="firstname" placeholder="Имя"><br>
     <input type="lastname" class="form-control" id="lastname" placeholder="Фамилия"><br>
-	 <input type="firstname" class="form-control" id="firstname" placeholder="Имя"><br>
-	  <input type="patronymic" class="form-control" id="patronymic" placeholder="Отчество"><br>
   </div> 
-    <div class="form-group">
-    <label class="control-label">Пол</label><br>
-    <div class="col-xs-2">
-      <label class="radio-inline">
-        <input type="radio" name="genderRadios" value="male"> Мужской
-      </label>
-    </div>
-    <div class="col-xs-2">
-      <label class="radio-inline">
-        <input type="radio" name="genderRadios" value="female"> Женский
-      </label>
-    </div>
-  </div>
-  <br>
-  <br>
+    <!--<div class="form-group">-->
+    <!--<label class="control-label">Пол</label><br>-->
+    <!--<div class="col-xs-2">-->
+      <!--<label class="radio-inline">-->
+        <!--<input type="radio" name="genderRadios" value="male"> Мужской-->
+      <!--</label>-->
+    <!--</div>-->
+    <!--<div class="col-xs-2">-->
+      <!--<label class="radio-inline">-->
+        <!--<input type="radio" name="genderRadios" value="female"> Женский-->
+      <!--</label>-->
+    <!--</div>-->
+  <!--</div>-->
   <div class="form-group">
         <input class="form-control" type="number" name="age" placeholder="Ваш возраст" min="18" max="70" />
 		<small id="ageHelp" class="form-text text-muted">Ваш возраст должен быть не менее 18, но не более 70.</small>
     </div>
+  <!--<div class="form-group">-->
+    <!--<label for="email">Адрес электронной почты</label>-->
+    <!--<input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Электронная почта">-->
+    <!--<small id="emailHelp" class="form-text text-muted">Мы никогда не делимся личными данными.</small>-->
+  <!--</div>-->
   <div class="form-group">
-    <label for="email1">Адрес электронной почты</label>
-    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Электронная почта">
-    <small id="emailHelp" class="form-text text-muted">Мы никогда не делимся личными данными.</small>
-  </div>
-  <div class="form-group">
-  <label for="tel">Номер телефона</label>
-        <input class="form-control" type="text" name="tel" placeholder="Мобильный телефон"/>
+  <!--<label for="phone">Номер телефона</label>-->
+        <input class="form-control" type="text" name="phone" placeholder="Мобильный телефон"/>
     </div>
-  <div class="form-group">
-    <label for="password">Пароль</label>
-    <input type="password" class="form-control" id="password1" placeholder="Пароль">
-  </div>
-  <div class="form-group">
-    <label for="exampleTextarea">Расскажите почему вы хотите помогать пожилым людям:</label>
-    <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
-  </div>
-  <div class="form-group">
-    <label for="file">Прикрепите скан вашего паспорта</label><br>
-    <input type="file" class="form-control-file" id="file" aria-describedby="fileHelp"><br>
-    <small id="help" class="form-text text-muted">Мы гарантируем, что Ваши персональные данные будут в полной безопасности.</small>
-  </div>
-    <legend>Что Вы готовы делать, что бы помочь пенсионеру?</legend>
-  <div class="form-check">
-    <label class="form-check-label">
-      <input type="checkbox" class="form-check-input">
-      Вынести мусор
-    </label><br>
-	<label class="form-check-label">
-      <input type="checkbox" class="form-check-input">
-		Убрать в доме
-    </label><br>
-	<label class="form-check-label">
-      <input type="checkbox" class="form-check-input">
-      Сходить в магазин за продуктами или в аптеку
-    </label><br>
-	<label class="form-check-label">
-      <input type="checkbox" class="form-check-input">
-      Могу оказать базовую медицинскую помощь
-    </label><br>
-	<label class="form-check-label">
-      <input type="checkbox" class="form-check-input">
-      Могу поддержать морально и разговаривать на любые темы
-    </label>
-  </div>
+  <!--<div class="form-group">-->
+    <!--<label for="password">Пароль</label>-->
+    <!--<input type="password" class="form-control" id="password" placeholder="Пароль">-->
+  <!--</div>-->
+  <!--<div class="form-group">-->
+    <!--<label for="textarea">Расскажите почему вы хотите помогать пожилым людям:</label>-->
+    <!--<textarea class="form-control" id="textarea" rows="3"></textarea>-->
+  <!--</div>-->
+  <!--<div class="form-group">-->
+    <!--<label for="file">Прикрепите скан вашего паспорта</label><br>-->
+    <!--<input type="file" class="form-control-file" id="file" aria-describedby="fileHelp"><br>-->
+    <!--<small id="help" class="form-text text-muted">Мы гарантируем, что Ваши персональные данные будут в полной безопасности.</small>-->
+  <!--</div>-->
+    <!--<legend>Что Вы готовы делать, что бы помочь пенсионеру?</legend>-->
+  <!--<div class="form-check">-->
+    <!--<label class="form-check-label">-->
+      <!--<input type="checkbox" class="form-check-input">-->
+      <!--Вынести мусор-->
+    <!--</label><br>-->
+	<!--<label class="form-check-label">-->
+      <!--<input type="checkbox" class="form-check-input">-->
+		<!--Убрать в доме-->
+    <!--</label><br>-->
+	<!--<label class="form-check-label">-->
+      <!--<input type="checkbox" class="form-check-input">-->
+      <!--Сходить в магазин за продуктами или в аптеку-->
+    <!--</label><br>-->
+	<!--<label class="form-check-label">-->
+      <!--<input type="checkbox" class="form-check-input">-->
+      <!--Могу оказать базовую медицинскую помощь-->
+    <!--</label><br>-->
+	<!--<label class="form-check-label">-->
+      <!--<input type="checkbox" class="form-check-input">-->
+      <!--Могу поддержать морально и разговаривать на любые темы-->
+    <!--</label>-->
+  <!--</div>-->
 </form>
                 </div>
                 <div class="modal-footer">
@@ -306,6 +303,7 @@
             </div>
         </div>
 		</div>
+        </div>
 		</section>
 
     <!-- Map -->
