--- a/public_html/index.html
+++ b/public_html/index.html
@@ -226,7 +226,7 @@
                     <h4 class="modal-title" color="black">Введите Ваши данные</h4>
                 </div>
                 <div class="modal-body">
-                    <form action="/index.html" method="POST">
+                    <form action="/formaction" method="POST">
 					  <div class="form-group">
     <label></label>
     <input type="firstname" class="form-control" id="firstname" placeholder="Имя"><br>
@@ -296,7 +296,7 @@
   <!--</div>-->
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
-                            <button type="submit" class="btn btn-primary">Сохранить изменения</button>
+                            <button type="submit" class="btn btn-primary">Отправить форму</button>
                         </div>
                     </form>
                 </div>
